force-app/main/default/objects/LDCT_Speaker__c/LDCT_Speaker__c.object-meta.xml
<CustomObject>
    <label>LDCT Speaker</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDCT Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>