force-app/main/default/objects/LDCT_Speaker__c/fields/Began_Investment_Career__c.field-meta.xml
<CustomField>
    <fullName>Began_Investment_Career__c</fullName>
    <label>Began Investment Career</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>