force-app/main/default/objects/LDCT_Speaker__c/fields/Beginning_date__c.field-meta.xml
<CustomField>
    <fullName>Beginning_date__c</fullName>
    <label>Beginning date</label>
    <type>Date</type>
</CustomField>