force-app/main/default/objects/LDCT_Speaker__c/fields/Bio_CN__c.field-meta.xml
<CustomField>
    <fullName>Bio_CN__c</fullName>
    <label>Bio CN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>