force-app/main/default/objects/LDCT_Speaker__c/fields/Bio_DE__c.field-meta.xml
<CustomField>
    <fullName>Bio_DE__c</fullName>
    <label>Bio DE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>