force-app/main/default/objects/LDCT_Speaker__c/fields/Bio_EN__c.field-meta.xml
<CustomField>
    <fullName>Bio_EN__c</fullName>
    <label>Bio EN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>