force-app/main/default/objects/LDCT_Speaker__c/fields/Bio_FR__c.field-meta.xml
<CustomField>
    <fullName>Bio_FR__c</fullName>
    <label>Bio FR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>