force-app/main/default/objects/LDCT_Speaker__c/fields/Bio_IT__c.field-meta.xml
<CustomField>
    <fullName>Bio_IT__c</fullName>
    <label>Bio IT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>