force-app/main/default/objects/LDCT_Speaker__c/fields/Bio_PT__c.field-meta.xml
<CustomField>
    <fullName>Bio_PT__c</fullName>
    <label>Bio PT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>