force-app/main/default/objects/LDCT_Speaker__c/fields/Bio_SP__c.field-meta.xml
<CustomField>
    <fullName>Bio_SP__c</fullName>
    <label>Bio SP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>