force-app/main/default/objects/LDCT_Speaker__c/fields/Caia__c.field-meta.xml
<CustomField>
    <fullName>Caia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caia</label>
    <type>Checkbox</type>
</CustomField>