force-app/main/default/objects/LDCT_Speaker__c/fields/CFA_Charterholder__c.field-meta.xml
<CustomField>
    <fullName>CFA_Charterholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CFA Charterholder</label>
    <type>Checkbox</type>
</CustomField>