force-app/main/default/objects/LDCT_Speaker__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>