force-app/main/default/objects/LDCT_Speaker__c/fields/Education_CN__c.field-meta.xml
<CustomField>
    <fullName>Education_CN__c</fullName>
    <label>Education CN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>