force-app/main/default/objects/LDCT_Speaker__c/fields/Education_DE__c.field-meta.xml
<CustomField>
    <fullName>Education_DE__c</fullName>
    <label>Education DE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>