force-app/main/default/objects/LDCT_Speaker__c/fields/Education_EN__c.field-meta.xml
<CustomField>
    <fullName>Education_EN__c</fullName>
    <label>Education EN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>