force-app/main/default/objects/LDCT_Speaker__c/fields/Education_FR__c.field-meta.xml
<CustomField>
    <fullName>Education_FR__c</fullName>
    <label>Education FR</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>