force-app/main/default/objects/LDCT_Speaker__c/fields/Education_IT__c.field-meta.xml
<CustomField>
    <fullName>Education_IT__c</fullName>
    <label>Education IT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>