force-app/main/default/objects/LDCT_Speaker__c/fields/Education_PT__c.field-meta.xml
<CustomField>
    <fullName>Education_PT__c</fullName>
    <label>Education PT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>