force-app/main/default/objects/LDCT_Speaker__c/fields/Education_SP__c.field-meta.xml
<CustomField>
    <fullName>Education_SP__c</fullName>
    <label>Education SP</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>