force-app/main/default/objects/LDCT_Speaker__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>