force-app/main/default/objects/LDCT_Speaker__c/fields/Experience_CN__c.field-meta.xml
<CustomField>
    <fullName>Experience_CN__c</fullName>
    <label>Experience CN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>