force-app/main/default/objects/LDCT_Speaker__c/fields/Experience_DE__c.field-meta.xml
<CustomField>
    <fullName>Experience_DE__c</fullName>
    <label>Experience DE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>