force-app/main/default/objects/LDCT_Speaker__c/fields/Experience_EN__c.field-meta.xml
<CustomField>
    <fullName>Experience_EN__c</fullName>
    <label>Experience EN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>