force-app/main/default/objects/LDCT_Speaker__c/fields/Experience_FR__c.field-meta.xml
<CustomField>
    <fullName>Experience_FR__c</fullName>
    <label>Experience FR</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>