force-app/main/default/objects/LDCT_Speaker__c/fields/Experience_IT__c.field-meta.xml
<CustomField>
    <fullName>Experience_IT__c</fullName>
    <label>Experience IT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>