force-app/main/default/objects/LDCT_Speaker__c/fields/Experience_PT__c.field-meta.xml
<CustomField>
    <fullName>Experience_PT__c</fullName>
    <label>Experience PT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>