force-app/main/default/objects/LDCT_Speaker__c/fields/Experience_SP__c.field-meta.xml
<CustomField>
    <fullName>Experience_SP__c</fullName>
    <label>Experience SP</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>