force-app/main/default/objects/LDCT_Speaker__c/fields/Funds_Currently_Managed__c.field-meta.xml
<CustomField>
    <fullName>Funds_Currently_Managed__c</fullName>
    <label>Funds Currently Managed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>