force-app/main/default/objects/LDCT_Speaker__c/fields/Headshot_Picture__c.field-meta.xml
<CustomField>
    <fullName>Headshot_Picture__c</fullName>
    <formula>IF(ISBLANK(Headshot_URL__c),&apos;&apos;,IMAGE ( Headshot_URL__c , &quot;&quot;, 240, 180))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Headshot Picture</label>
    <type>Text</type>
</CustomField>