force-app/main/default/objects/LDCT_Speaker__c/fields/Headshot_URL__c.field-meta.xml
<CustomField>
    <fullName>Headshot_URL__c</fullName>
    <label>Headshot URL</label>
    <type>Url</type>
</CustomField>