force-app/main/default/objects/LDCT_Speaker__c/fields/Ipad_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Ipad_Picture_URL__c</fullName>
    <label>Public Picture URL</label>
    <type>Url</type>
</CustomField>