force-app/main/default/objects/LDCT_Speaker__c/fields/Joined_Firm__c.field-meta.xml
<CustomField>
    <fullName>Joined_Firm__c</fullName>
    <label>Joined Firm</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>