force-app/main/default/objects/LDCT_Speaker__c/fields/LDCT_Project__c.field-meta.xml
<CustomField>
    <fullName>LDCT_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>LDCT Project</label>
    <referenceTo>LDCT_Project__c</referenceTo>
    <relationshipLabel>LDCT Speakers</relationshipLabel>
    <relationshipName>LDCT_Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>