force-app/main/default/objects/LDCT_Speaker__c/fields/Link_fund__c.field-meta.xml
<CustomField>
    <fullName>Link_fund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link to Fund</label>
    <type>Checkbox</type>
</CustomField>