force-app/main/default/objects/LDCT_Speaker__c/fields/Phd__c.field-meta.xml
<CustomField>
    <fullName>Phd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phd</label>
    <type>Checkbox</type>
</CustomField>