force-app/main/default/objects/LDCT_Speaker__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <label>Event Management Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>