force-app/main/default/objects/LDCT_Speaker__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>LDCT Speakers</relationshipLabel>
    <relationshipName>LDCT_Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>