force-app/main/default/objects/LDCT_Speaker__c/fields/Title_CN__c.field-meta.xml
<CustomField>
    <fullName>Title_CN__c</fullName>
    <label>Title CN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>