force-app/main/default/objects/LDCT_Speaker__c/fields/Title_DE__c.field-meta.xml
<CustomField>
    <fullName>Title_DE__c</fullName>
    <label>Title DE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>