force-app/main/default/objects/LDCT_Speaker__c/fields/Title_EN__c.field-meta.xml
<CustomField>
    <fullName>Title_EN__c</fullName>
    <label>Title EN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>