force-app/main/default/objects/LDCT_Speaker__c/fields/Title_FR__c.field-meta.xml
<CustomField>
    <fullName>Title_FR__c</fullName>
    <label>Title FR</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>