force-app/main/default/objects/LDCT_Speaker__c/fields/Title_IT__c.field-meta.xml
<CustomField>
    <fullName>Title_IT__c</fullName>
    <label>Title IT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>