force-app/main/default/objects/LDCT_Speaker__c/fields/Title_PT__c.field-meta.xml
<CustomField>
    <fullName>Title_PT__c</fullName>
    <label>Title PT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>