force-app/main/default/objects/LDCT_Speaker__c/fields/Title_SP__c.field-meta.xml
<CustomField>
    <fullName>Title_SP__c</fullName>
    <label>Title SP</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>