force-app/main/default/objects/LDCT_Speaker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FirstName__c</columns>
    <columns>NAME</columns>
    <columns>Began_Investment_Career__c</columns>
    <columns>Joined_Firm__c</columns>
    <columns>CFA_Charterholder__c</columns>
    <columns>Caia__c</columns>
    <columns>Phd__c</columns>
    <columns>Bio_EN__c</columns>
    <columns>Education__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Picture__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>